[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools]
zip-safe = false
include-package-data = true

[project]
name = "naqslab_devices_new"
# version = "0.5.0"
description = "Collection of 3rd party devices for the labscript suite experimental control system"
authors = [{name = "naqslab", email = "naqslab@gmail.com"}]
dynamic = ["version"]
license = "BSD-2-Clause"
dependencies = []  # Add any runtime dependencies here

# [tool.setuptools.packages.find]
# include = ["naqslab_devices.*"]

[tool.setuptools.package-dir]
"naqslab_devices_new" = "./naqslab_devices_new"

# [tool.setuptools.packages]
# find = {namespaces = true}
