[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"naqs_devices" = "./src/naqs_devices"

[project]
name = "naqs_devices"
description = "Collection of 3rd party devices for the labscript suite experimental control system"
authors = [{name = "naqslab", email = "naqslab@gmail.com"}]
dynamic = ["version"]
license = {file = 'LICENSE.txt'}
dependencies = [
    "blacs>=3.2.0",
    "labscript_devices>=3.2.0",
    "labscript>=3.3.0",
    "labscript_utils>=3.3.0",
]

[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==7.3.7",
    "sphinx-rtd-theme==2.0.0",
    "myst_parser==4.0.1",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"